get data for all terms

--- a/QueryRank.ipynb
+++ b/QueryRank.ipynb
@@ -101,7 +101,7 @@
     "        return df[term]['df']\n",
     "    return 0\n",
     "\n",
-    "def getTermDocId(term:str) -> int:\n",
+    "def getTermDocId(term:str) -> set:\n",
     "    df = pd.read_hdf('DevHDF5/TermMeta.hdf5', term[0])\n",
     "    if term in df:\n",
     "        return df[term]['docIds']\n",
@@ -117,16 +117,17 @@
     "    return df['docLen'][docId]\n",
     "\n",
     "def getTf(term:str):\n",
-    "    df = pd.read_hdf('DevHDF5/Terms.hdf5', 'terms')\n",
+    "    df = pd.read_hdf('DevHDF5/TermTf.hdf5', term[0])\n",
     "    if term in df['Terms']:\n",
     "        return json.loads(df['Terms'][term])\n",
     "    return {}\n",
     "\n",
     "def getDocIds(queryList:list) -> set:\n",
     "    unionSet = set()\n",
-    "    for word in queryList:\n",
+    "    for i in range(0,len(queryList)):\n",
+    "        word = queryList[i]\n",
     "        docSet = getTermDocId(word)\n",
-    "        if len(unionSet) == 0:\n",
+    "        if i == 0:\n",
     "            unionSet = docSet\n",
     "        else:\n",
     "            unionSet = unionSet.intersection(docSet)\n",
@@ -158,19 +159,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "qWords = stemQuery(\"fox dog and\") # ['fox', 'dog', 'and']\n",
-    "docIds = getDocIds(qWords) # {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ... }\n",
-    "idf_dict = getIdfDict(qWords) #{'fox': 7.007990707741848, 'dog': 5.623194474242979, 'and': 4.930297199969477}\n",
-    "inverted_index_tfs = getInvertedTfDict(qWords, docIds) #{'fox': {'doc1': 0.1111111111111111, 'doc2': 0, 'doc3': 0.3333333333333333}, 'dog': {'doc1': 0.1111111111111111, .... }"
+    "docIds = getDocIds(qWords) # {22705, 25210, 25247}\n",
+    "idf_dict = getIdfDict(qWords) # {'fox': 7.872738675350646, 'dog': 7.091198765830064, 'and': 2.247797681735771}\n",
+    "inverted_index_tfs = getInvertedTfDict(qWords, docIds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fox': {'doc22705': 0.002805049088359046,\n",
+       "  'doc25210': 0.00020582907953235632,\n",
+       "  'doc25247': 0.0008100186971040767},\n",
+       " 'dog': {'doc22705': 0.002805049088359046,\n",
+       "  'doc25210': 0.0010908941215214886,\n",
+       "  'doc25247': 0.00011490633006204942},\n",
+       " 'and': {'doc22705': 0.013744740532959326,\n",
+       "  'doc25210': 0.00016466326362588507,\n",
+       "  'doc25247': 0.002339265904596537}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inverted_index_tfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
