--- a/ReadHdf5.ipynb
+++ b/ReadHdf5.ipynb
@@ -445,15 +445,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 1047, 24, 1053, 544, 545, 34, 1060, 1572, 550, 1063, 552, 41, 554, 1069, 47, 48, 559, 563, 1077, 55, 56, 568, 58, 1081, 1082, 1596, 63, 1087, 65, 1091, 1092, 1603, 1096, 585, 588, 78, 79, 1614, 594, 1618, 85, 1110, 1111, 1113, 96, 99, 612, 1123, 1126, 104, 1643, 112, 626, 115, 116, 1144, 128, 129, 640, 2176, 133, 1158, 139, 140, 1166, 655, 144, 1172, 149, 662, 663, 152, 667, 1186, 1698, 164, 1191, 680, 1195, 1197, 1198, 687, 1199, 183, 184, 188, 701, 707, 2248, 715, 716, 1229, 1235, 725, 1239, 1241, 219, 731, 732, 1248, 227, 2276, 743, 745, 234, 243, 755, 1269, 247, 1276, 253, 1279, 770, 259, 1284, 1289, 267, 779, 782, 271, 784, 785, 1808, 788, 277, 796, 287, 800, 801, 293, 806, 807, 811, 304, 307, 820, 311, 312, 823, 1337, 1341, 318, 319, 836, 325, 326, 330, 331, 847, 857, 1882, 1888, 353, 359, 361, 874, 881, 882, 885, 889, 381, 893, 899, 388, 389, 902, 904, 912, 401, 2455, 1434, 1441, 930, 420, 421, 936, 940, 432, 948, 440, 442, 445, 451, 459, 979, 469, 982, 471, 985, 988, 478, 479, 482, 485, 494, 500, 501, 502, 508, 510}\n",
-      "209\n"
+      "{19969, 18947, 24069, 18949, 22025, 19978, 18444, 23059, 21525, 22038, 21530, 24603, 21532, 21537, 25122, 25123, 20005, 24620, 22575, 18483, 24628, 17976, 21562, 21563, 21566, 21572, 24137, 19537, 21585, 24657, 18518, 25175, 19032, 21592, 21593, 21594, 23130, 23643, 23644, 21599, 20064, 18017, 21603, 21606, 20071, 21621, 21622, 22134, 21625, 25210, 21627, 18044, 21630, 20094, 22656, 21631, 18050, 21636, 21637, 21640, 18569, 22153, 22666, 18061, 19598, 21646, 24208, 21649, 24722, 21654, 17559, 21655, 24216, 19099, 19614, 25247, 24225, 19106, 21679, 23221, 24253, 21185, 17602, 21187, 18118, 19144, 23752, 23246, 25810, 21204, 19673, 19674, 21211, 22249, 21228, 18159, 19695, 18161, 17650, 21234, 20213, 22263, 24312, 19705, 21242, 21248, 20226, 21252, 19720, 22281, 21258, 21771, 25867, 23310, 21264, 22290, 24851, 21268, 19221, 21270, 20252, 21276, 19230, 21279, 24351, 21286, 20265, 21294, 25905, 21813, 19769, 20795, 21308, 17729, 23361, 18245, 20297, 20298, 21835, 22858, 21325, 19790, 20304, 21329, 24404, 20310, 20311, 20313, 20315, 19804, 21341, 19807, 21343, 17761, 21344, 19811, 21350, 22374, 19817, 19821, 22897, 18805, 19830, 21365, 21375, 17794, 21379, 21382, 18825, 18314, 21386, 21389, 18319, 21392, 23955, 23957, 22422, 21400, 21402, 21406, 18337, 21411, 23975, 23977, 25515, 22956, 23985, 22963, 21940, 17845, 18869, 24500, 22457, 22459, 21437, 21440, 18882, 18372, 18373, 19913, 21962, 24011, 24525, 21455, 21458, 25557, 23516, 18397, 18398, 21470, 17888, 21471, 21475, 23526, 22503, 25064, 21481, 23530, 18412, 21484, 21485, 22510, 25070, 24051, 21492, 21498, 23549}\n",
+      "227\n"
      ]
     },
     {
@@ -477,66 +477,66 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>artifici</th>\n",
-       "      <th>ai</th>\n",
-       "      <th>about</th>\n",
-       "      <th>at</th>\n",
-       "      <th>a</th>\n",
        "      <th>and</th>\n",
-       "      <th>applic</th>\n",
-       "      <th>among</th>\n",
-       "      <th>academia</th>\n",
-       "      <th>almuni</th>\n",
+       "      <th>about</th>\n",
+       "      <th>affili</th>\n",
+       "      <th>attract</th>\n",
+       "      <th>anoth</th>\n",
+       "      <th>are</th>\n",
+       "      <th>a</th>\n",
+       "      <th>at</th>\n",
+       "      <th>august</th>\n",
+       "      <th>as</th>\n",
        "      <th>...</th>\n",
-       "      <th>atox1</th>\n",
-       "      <th>arpp19</th>\n",
-       "      <th>aw047730</th>\n",
-       "      <th>arhgap32</th>\n",
-       "      <th>acsl6</th>\n",
-       "      <th>au040320</th>\n",
-       "      <th>apod</th>\n",
-       "      <th>a030009h04rik</th>\n",
-       "      <th>adal</th>\n",
-       "      <th>a930024n18rik</th>\n",
+       "      <th>average1</th>\n",
+       "      <th>average2</th>\n",
+       "      <th>averqage2</th>\n",
+       "      <th>analag</th>\n",
+       "      <th>arbitarili</th>\n",
+       "      <th>aeiouy</th>\n",
+       "      <th>afterword</th>\n",
+       "      <th>assocati</th>\n",
+       "      <th>additionali</th>\n",
+       "      <th>arkhipov</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>docIds</th>\n",
-       "      <td>{1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 10...</td>\n",
-       "      <td>{1, 2, 3, 1042, 1555, 2082, 1572, 41, 554, 56,...</td>\n",
-       "      <td>{1, 2, 3, 11, 12, 13, 14, 17, 20, 21, 22, 24, ...</td>\n",
-       "      <td>{1, 2, 3, 4, 2049, 6, 7, 9, 10, 11, 12, 15, 16...</td>\n",
-       "      <td>{1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 2058...</td>\n",
-       "      <td>{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...</td>\n",
-       "      <td>{1, 2, 1539, 3, 5, 6, 7, 1032, 9, 522, 1033, 2...</td>\n",
-       "      <td>{128, 1, 2, 3, 643, 2176, 1287, 776, 14, 272, ...</td>\n",
-       "      <td>{1, 2, 3, 1138, 1299}</td>\n",
-       "      <td>{1, 2, 3}</td>\n",
+       "      <td>{17553, 17554, 17555, 17556, 17557, 17558, 175...</td>\n",
+       "      <td>{24577, 24582, 24584, 24586, 24595, 24601, 246...</td>\n",
+       "      <td>{25210, 17553, 17554, 17555, 17556, 17557, 175...</td>\n",
+       "      <td>{18947, 18435, 17924, 18949, 17930, 22539, 225...</td>\n",
+       "      <td>{18432, 20481, 24577, 18436, 22532, 24580, 184...</td>\n",
+       "      <td>{24577, 24580, 24584, 24586, 24596, 24601, 246...</td>\n",
+       "      <td>{17553, 17554, 17555, 17556, 17557, 17558, 175...</td>\n",
+       "      <td>{24577, 24580, 24581, 24584, 24586, 24589, 245...</td>\n",
+       "      <td>{22543, 18447, 18454, 24599, 18457, 18460, 184...</td>\n",
+       "      <td>{24577, 24580, 24584, 24586, 24601, 24603, 246...</td>\n",
        "      <td>...</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
-       "      <td>{2738}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25901}</td>\n",
+       "      <td>{25906}</td>\n",
+       "      <td>{25927}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>df</th>\n",
-       "      <td>209</td>\n",
-       "      <td>82</td>\n",
-       "      <td>694</td>\n",
-       "      <td>1222</td>\n",
-       "      <td>880</td>\n",
-       "      <td>1812</td>\n",
-       "      <td>231</td>\n",
-       "      <td>72</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
+       "      <td>5850</td>\n",
+       "      <td>3593</td>\n",
+       "      <td>1668</td>\n",
+       "      <td>140</td>\n",
+       "      <td>623</td>\n",
+       "      <td>3281</td>\n",
+       "      <td>5106</td>\n",
+       "      <td>4363</td>\n",
+       "      <td>476</td>\n",
+       "      <td>2877</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -551,54 +551,62 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 3183 columns</p>\n",
+       "<p>2 rows × 6066 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 artifici  \\\n",
-       "docIds  {1, 2, 3, 1028, 513, 1032, 1034, 1555, 534, 10...   \n",
-       "df                                                    209   \n",
-       "\n",
-       "                                                       ai  \\\n",
-       "docIds  {1, 2, 3, 1042, 1555, 2082, 1572, 41, 554, 56,...   \n",
-       "df                                                     82   \n",
+       "                                                      and  \\\n",
+       "docIds  {17553, 17554, 17555, 17556, 17557, 17558, 175...   \n",
+       "df                                                   5850   \n",
        "\n",
        "                                                    about  \\\n",
-       "docIds  {1, 2, 3, 11, 12, 13, 14, 17, 20, 21, 22, 24, ...   \n",
-       "df                                                    694   \n",
+       "docIds  {24577, 24582, 24584, 24586, 24595, 24601, 246...   \n",
+       "df                                                   3593   \n",
        "\n",
-       "                                                       at  \\\n",
-       "docIds  {1, 2, 3, 4, 2049, 6, 7, 9, 10, 11, 12, 15, 16...   \n",
-       "df                                                   1222   \n",
+       "                                                   affili  \\\n",
+       "docIds  {25210, 17553, 17554, 17555, 17556, 17557, 175...   \n",
+       "df                                                   1668   \n",
+       "\n",
+       "                                                  attract  \\\n",
+       "docIds  {18947, 18435, 17924, 18949, 17930, 22539, 225...   \n",
+       "df                                                    140   \n",
+       "\n",
+       "                                                    anoth  \\\n",
+       "docIds  {18432, 20481, 24577, 18436, 22532, 24580, 184...   \n",
+       "df                                                    623   \n",
+       "\n",
+       "                                                      are  \\\n",
+       "docIds  {24577, 24580, 24584, 24586, 24596, 24601, 246...   \n",
+       "df                                                   3281   \n",
        "\n",
        "                                                        a  \\\n",
-       "docIds  {1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 2058...   \n",
-       "df                                                    880   \n",
+       "docIds  {17553, 17554, 17555, 17556, 17557, 17558, 175...   \n",
+       "df                                                   5106   \n",
        "\n",
-       "                                                      and  \\\n",
-       "docIds  {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14...   \n",
-       "df                                                   1812   \n",
+       "                                                       at  \\\n",
+       "docIds  {24577, 24580, 24581, 24584, 24586, 24589, 245...   \n",
+       "df                                                   4363   \n",
        "\n",
-       "                                                   applic  \\\n",
-       "docIds  {1, 2, 1539, 3, 5, 6, 7, 1032, 9, 522, 1033, 2...   \n",
-       "df                                                    231   \n",
+       "                                                   august  \\\n",
+       "docIds  {22543, 18447, 18454, 24599, 18457, 18460, 184...   \n",
+       "df                                                    476   \n",
        "\n",
-       "                                                    among  \\\n",
-       "docIds  {128, 1, 2, 3, 643, 2176, 1287, 776, 14, 272, ...   \n",
-       "df                                                     72   \n",
+       "                                                       as  ... average1  \\\n",
+       "docIds  {24577, 24580, 24584, 24586, 24601, 24603, 246...  ...  {25901}   \n",
+       "df                                                   2877  ...        1   \n",
        "\n",
-       "                     academia     almuni  ...   atox1  arpp19 aw047730  \\\n",
-       "docIds  {1, 2, 3, 1138, 1299}  {1, 2, 3}  ...  {2738}  {2738}   {2738}   \n",
-       "df                          5          3  ...       1       1        1   \n",
+       "       average2 averqage2   analag arbitarili   aeiouy afterword assocati  \\\n",
+       "docIds  {25901}   {25901}  {25901}    {25901}  {25901}   {25901}  {25901}   \n",
+       "df            1         1        1          1        1         1        1   \n",
        "\n",
-       "       arhgap32   acsl6 au040320    apod a030009h04rik    adal a930024n18rik  \n",
-       "docIds   {2738}  {2738}   {2738}  {2738}        {2738}  {2738}        {2738}  \n",
-       "df            1       1        1       1             1       1             1  \n",
+       "       additionali arkhipov  \n",
+       "docIds     {25906}  {25927}  \n",
+       "df               1        1  \n",
        "\n",
-       "[2 rows x 3183 columns]"
+       "[2 rows x 6066 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,8 +635,9 @@
     }
    ],
    "source": [
-    "terms = pd.read_hdf('DevHDF5/Terms.hdf5', 'terms')\n",
-    "terms['Terms']['hello']"
+    "term = 'hello'\n",
+    "terms = pd.read_hdf('DevHDF5/TermTf.hdf5', term[0])\n",
+    "terms['Terms'][term]"
    ]
   }
  ],
