rename folder DevHDF5 to Data

--- a/QueryRank.ipynb
+++ b/QueryRank.ipynb
@@ -102,7 +102,7 @@
         "    return 0\n",
         "\n",
         "def getTermDocId(term:str) -> set:\n",
-        "    df = pd.read_hdf('DevHDF5/TermMeta.hdf5', term[0])\n",
+        "    df = pd.read_hdf('Data/TermMeta.hdf5', term[0])\n",
         "    if term in df:\n",
         "        return df[term]['docIds']\n",
         "    return 0\n",
@@ -117,7 +117,7 @@
         "    return df['docLen'][docId]\n",
         "\n",
         "def getTf(term:str):\n",
-        "    df = pd.read_hdf('DevHDF5/TermTf.hdf5', term[0])\n",
+        "    df = pd.read_hdf('Data/TermTf.hdf5', term[0])\n",
         "    if term in df['Terms']:\n",
         "        return json.loads(df['Terms'][term])\n",
         "    return {}\n",
