--- a/TermTf.ipynb
+++ b/TermTf.ipynb
@@ -13,7 +13,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "invIndex = InvertedIndex()\n",
-    "invIndex.loadAll('DevShelve',6)"
+    "invIndex.loadAll('DevShelve')"
    ]
   },
   {
