--- a/TermMeta.ipynb
+++ b/TermMeta.ipynb
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "\n",
     "invIndex = InvertedIndex()\n",
-    "invIndex.loadAll('DevShelve', 6)\n",
+    "invIndex.loadAll('DevShelve')\n",
     "\n",
     "# import warnings\n",
     "# warnings.filterwarnings('ignore')"
