--- a/IndexMerge.ipynb
+++ b/IndexMerge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
     "        with open(f'Data/Posting{count}.txt', \"r+\") as fp:\n",
     "            fp.seek(fpDict[term][count])\n",
     "            tInfo = fp.readline().strip().split('-')[1]\n",
+    "            tInfo = json.loads(tInfo)\n",
     "            if not termInfo:\n",
-    "                termInfo = json.loads(tInfo)\n",
+    "                termInfo = tInfo\n",
     "            else:\n",
     "                #Merge\n",
-    "                tInfo = json.loads(tInfo)\n",
     "                termInfo['df'] += tInfo['df']\n",
     "                termInfo['tf'].update(tInfo['tf'])\n",
     "                termInfo['docIds'].extend(tInfo['docIds'])\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
