--- a/IndexMerge.ipynb
+++ b/IndexMerge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,36 @@
     "                termInfo['df'] += tInfo['df']\n",
     "                termInfo['tf'].update(tInfo['tf'])\n",
     "                termInfo['docIds'].extend(tInfo['docIds'])\n",
-    "    return termInfo"
+    "    return termInfo\n",
+    "\n",
+    "def getFpIdDict():\n",
+    "    fpDict = {}\n",
+    "    with open(f'docId.txt', \"r+\") as fp:\n",
+    "        while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
+    "            fpPos = fp.tell()\n",
+    "            line = fp.readline().split()\n",
+    "            docId = line[0]\n",
+    "            fpDict[int(docId)] = fpPos\n",
+    "    return fpDict\n",
+    "\n",
+    "def getUrl(docId, fpDict) -> str:\n",
+    "    with open(f'docId.txt', \"r+\") as fp:\n",
+    "        fp.seek(fpDict[docId])\n",
+    "        return fp.readline().strip().split()[1]\n",
+    "    \n",
+    "def getDocLen(docId, fpDict) -> str:\n",
+    "    with open(f'docId.txt', \"r+\") as fp:\n",
+    "        fp.seek(fpDict[docId])\n",
+    "        return int(fp.readline().strip().split()[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idDict = getFpIdDict()"
    ]
   },
   {
@@ -66,6 +95,13 @@
     "term = 'speed'\n",
     "print(getTermInfo(term,fpDict))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
