move docId to data Folder

--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "def getFpIdDict():\n",
     "    fpDict = {}\n",
-    "    with open(f'docId.txt', \"r+\") as fp:\n",
+    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
     "        while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
     "            fpPos = fp.tell()\n",
     "            line = fp.readline().split()\n",
@@ -51,12 +51,12 @@
     "    return fpDict\n",
     "\n",
     "def getUrl(docId, fpDict) -> str:\n",
-    "    with open(f'docId.txt', \"r+\") as fp:\n",
+    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
     "        return fp.readline().strip().split()[1]\n",
     "    \n",
     "def getDocLen(docId, fpDict) -> str:\n",
-    "    with open(f'docId.txt', \"r+\") as fp:\n",
+    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
     "        return int(fp.readline().strip().split()[2])"
    ]
@@ -208,7 +208,7 @@
      "output_type": "stream",
      "text": [
       "{'doc22705': 0.37207005090957934, 'doc25247': 0.10212813324619774, 'doc42161': 0.10212813324619774, 'doc32919': 0.10071046555461621, 'doc25210': 0.10071046555461621, 'doc37700': 0.0669805272287074, 'doc7852': 0.044648980187927165, 'doc6047': 0.044648980187927165, 'doc46604': 0.03909948276934318, 'doc49931': 0.004073502983292416}\n",
-      "135 ms\n"
+      "122 ms\n"
      ]
     }
    ],
