add query comment

--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -208,14 +208,14 @@
      "output_type": "stream",
      "text": [
       "{'doc22705': 0.37207005090957934, 'doc25247': 0.10212813324619774, 'doc42161': 0.10212813324619774, 'doc32919': 0.10071046555461621, 'doc25210': 0.10071046555461621, 'doc37700': 0.0669805272287074, 'doc7852': 0.044648980187927165, 'doc6047': 0.044648980187927165, 'doc46604': 0.03909948276934318, 'doc49931': 0.004073502983292416}\n",
-      "122 ms\n"
+      "135 ms\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "start = time.time()\n",
-    "\n",
+    "# qWords = stemQuery(\"machine learning\")  #Takes LONG AF\n",
     "qWords = stemQuery(\"fox dog and\") # ['fox', 'dog', 'and']\n",
     "docIds = getDocIds(qWords,fpDict) # {6047, 7852, 22732, 25237, 25274, 32946, 37727, 42188, 46631, 49958}\n",
     "idf_dict = getIdfDict(qWords,fpDict) # {'fox': 6.229746822993642, 'dog': 4.945407031631708, 'and': 0.5274289094373557}\n",
