get sum of weights for a term in a doc

--- a/InvertedIndex_Demo.ipynb
+++ b/InvertedIndex_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Token: fish\n",
-       "\tDocId: 1, Freq: 1\n",
-       "\t\tPos: {1}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
-       "\tDocId: 2, Freq: 2\n",
-       "\t\tPos: {1, 2}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fTok = Token('fish')\n",
     "fTok.addDoc(1)\n",
@@ -51,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,31 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Tokens: 2\n",
-      "Token: fish\n",
-      "\tDocId: 1, Freq: 1\n",
-      "\t\tPos: {1}\n",
-      "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
-      "\tDocId: 2, Freq: 2\n",
-      "\t\tPos: {1, 2}\n",
-      "\t\tWeights: {'title': {1}, 'normal': {1, 2}}\n",
-      "\n",
-      "Token: Tropical\n",
-      "\tDocId: 1, Freq: 1\n",
-      "\t\tPos: {10}\n",
-      "\t\tWeights: {'title': {12}, 'normal': {11}}\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "invIndex = InvertedIndex()\n",
     "\n",
@@ -101,26 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Token: fish\n",
-       "\tDocId: 1, Freq: 1\n",
-       "\t\tPos: {1}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1}}\n",
-       "\tDocId: 2, Freq: 2\n",
-       "\t\tPos: {1, 2}\n",
-       "\t\tWeights: {'title': {1}, 'normal': {1, 2}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Access fish term\n",
     "invIndex['fish']"
@@ -128,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Access fish term positions in document 1\n",
     "#CHECK IF DOCID exists first\n",
@@ -148,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': {1}, 'normal': {1}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Access fish term fields in document 1\n",
     "#CHECK IF DOCID exists first\n",
@@ -168,25 +96,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Token info 'IDK' does NOT exist!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\InvertedIndex_Demo.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Access unknown type\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/RJ/UCI/Ralph%20School/2023%20Spring/CS%20121/Assignments/A3WebSearch/InvertedIndex_Demo.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m invIndex[\u001b[39m'\u001b[39;49m\u001b[39mfish\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mIDK\u001b[39;49m\u001b[39m'\u001b[39;49m]\n",
-      "File \u001b[1;32md:\\RJ\\UCI\\Ralph School\\2023 Spring\\CS 121\\Assignments\\A3WebSearch\\HelperClass.py:44\u001b[0m, in \u001b[0;36mToken.__getitem__\u001b[1;34m(self, postType)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, postType:\u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mdict\u001b[39m:\n\u001b[1;32m---> 44\u001b[0m     \u001b[39massert\u001b[39;00m postType \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpos\u001b[39m\u001b[39m'\u001b[39m \u001b[39mor\u001b[39;00m postType \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mfield\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToken info \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpostType\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m does NOT exist!\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     46\u001b[0m     \u001b[39mif\u001b[39;00m postType \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mpos\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     47\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_positions\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Token info 'IDK' does NOT exist!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Access unknown type\n",
     "invIndex['fish']['IDK']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://aiclub.ics.uci.edu/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "390"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from HelperClass import InvertedIndex, WeightFlags\n",
+    "from helper import tokenizeHtml\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# Opening JSON file\n",
+    "def getJsonData(filePath):\n",
+    "    jFile = open(filePath)\n",
+    "    data = json.load(jFile)\n",
+    "    enc = data['encoding']\n",
+    "    jFile.close()\n",
+    "    data = ''\n",
+    "    jFile = open(filePath, encoding=enc)\n",
+    "    data = json.load(jFile)\n",
+    "    jFile.close()\n",
+    "    url = data['url']\n",
+    "    htmlContent = data['content']\n",
+    "    return (url, htmlContent)\n",
+    "\n",
+    "def getJsonFiles(rootDir):\n",
+    "    jsonFiles = []\n",
+    "    for root, dirs, files in os.walk(rootDir):\n",
+    "        for name in files:\n",
+    "            if name.endswith((\".json\")):\n",
+    "                full_path = os.path.join(root, name)\n",
+    "                jsonFiles.append(full_path)\n",
+    "    return jsonFiles\n",
+    "\n",
+    "\n",
+    "rootDir = 'D:/RJ/UCI/Ralph School/2023 Spring/CS 121/Assignments/.vscode/Res/DEV'\n",
+    "jsonFiles = getJsonFiles(rootDir)\n",
+    "\n",
+    "docId = 1\n",
+    "url, htmlContent = getJsonData(jsonFiles[docId-1])\n",
+    "print(url)\n",
+    "invIndex = InvertedIndex() #Create inverted index to hold tokens from parser\n",
+    "tokenizeHtml(docId=docId, invIndex=invIndex, htmlContent=htmlContent)\n",
+    "# print(invIndex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: {'title': {1}, 'h3': {21, 46}, 'normal': {384, 211}}}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wFlag = WeightFlags()\n",
+    "print(invIndex['field']['artifici'])\n",
+    "wFlag.getSum(invIndex['field']['artifici'][1])"
    ]
   }
  ],
