--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +35,16 @@
     "            else:\n",
     "                #Merge\n",
     "                termInfo['df'] += tInfo['df']\n",
-    "                termInfo['tf'].update(tInfo['tf'])\n",
+    "                termInfo['wTf'].update(tInfo['wTf'])\n",
     "                termInfo['docIds'].extend(tInfo['docIds'])\n",
     "    return termInfo\n",
-    "\n",
     "\n",
     "def getFpIdDict():\n",
     "    fpDict = {}\n",
     "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
     "        while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
     "            fpPos = fp.tell()\n",
-    "            line = fp.readline().split()\n",
+    "            line = fp.readline().split('>')\n",
     "            docId = line[0]\n",
     "            fpDict[int(docId)] = fpPos\n",
     "    return fpDict\n",
@@ -53,12 +52,14 @@
     "def getUrl(docId, fpDict) -> str:\n",
     "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
-    "        return fp.readline().strip().split()[1]\n",
+    "        docInfo = json.loads(fp.readline().split('>')[1])\n",
+    "        return docInfo['url']\n",
     "    \n",
     "def getDocLen(docId, fpDict) -> str:\n",
     "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
-    "        return int(fp.readline().strip().split()[2])"
+    "        docInfo = json.loads(fp.readline().split('>')[1])\n",
+    "        return docInfo['docLen']"
    ]
   },
   {
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +174,11 @@
     "def getInvertedTf(term:str, docIdList:list[int], fpDict, idDict) -> dict:\n",
     "    resultTf = {}\n",
     "    resultTf[term] = {}\n",
-    "    tfDict = getTermInfo(term,fpDict)['tf']\n",
+    "    tfDict = getTermInfo(term,fpDict)['wTf']\n",
     "    for docId in docIdList:\n",
     "        docIdStr = str(docId)\n",
     "        if docIdStr in tfDict:\n",
-    "            resultTf[term][f'doc{docId}'] = tfDict[docIdStr] / getDocLen(docId, idDict)\n",
+    "            resultTf[term][docIdStr] = tfDict[docIdStr] / getDocLen(docId, idDict)\n",
     "    return resultTf\n",
     "\n",
     "def getInvertedTfDict(queryList:list, docList:list[int], fpDict, idDict) -> dict:\n",
@@ -194,21 +195,30 @@
    "outputs": [],
    "source": [
     "#Create Index of Index before query\n",
-    "fpDict = getFpDict(8)\n",
+    "fpDict = getFpDict(6)\n",
     "idDict = getFpIdDict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'doc22705': 0.37207005090957934, 'doc25247': 0.10212813324619774, 'doc42161': 0.10212813324619774, 'doc32919': 0.10071046555461621, 'doc25210': 0.10071046555461621, 'doc37700': 0.0669805272287074, 'doc7852': 0.044648980187927165, 'doc6047': 0.044648980187927165, 'doc46604': 0.03909948276934318, 'doc49931': 0.004073502983292416}\n",
-      "146 ms\n"
+      "https://www.ics.uci.edu/~ics1c/doc/html_crash.html 0.3722521606742945\n",
+      "https://www.ics.uci.edu/~kay/courses/h22/hw/DVD-random.txt 0.10214257113753401\n",
+      "https://www.ics.uci.edu/~kay/courses/h22/hw/DVD.txt 0.10214257113753401\n",
+      "https://www.ics.uci.edu/~kay/courses/h22/hw/wordlist-random.txt 0.10085162388553048\n",
+      "https://www.ics.uci.edu/~kay/courses/h22/hw/wordlist.txt 0.10085162388553048\n",
+      "https://www.ics.uci.edu/~kay/courses/31/hw/lab6.html 0.06721793450252492\n",
+      "http://flamingo.ics.uci.edu/releases/4.0/src/lbaktree/data/data.txt 0.0447191445084951\n",
+      "http://flamingo.ics.uci.edu/releases/4.1/src/lbaktree/data/data.txt 0.0447191445084951\n",
+      "https://www.ics.uci.edu/~dan/class/267P/datasets/calgary/book1 0.03915725605622696\n",
+      "https://www.ics.uci.edu/~kay/wordlist.txt 0.004076291004745179\n",
+      "139 ms\n"
      ]
     }
    ],
@@ -223,7 +233,9 @@
     "query_vector = create_query_vector(qWords,idf_dict) # [2.076582274331214, 1.6484690105439026, 0.17580963647911854]\n",
     "doc_vectors = create_doc_vector(qWords, query_vector, inverted_index_tfs, idf_dict)\n",
     "cs = create_cs_doc(query_vector,doc_vectors)\n",
-    "print(cs)\n",
+    "for docIdStr in cs:\n",
+    "    docUrl = getUrl(int(docIdStr), idDict)\n",
+    "    print(docUrl, cs[docIdStr])\n",
     "end = time.time()\n",
     "\n",
     "print(round((end - start) * 1000),'ms') #Time in milliseconds"
