add fileName var

--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
+    "fileName = 'Data'\n",
     "\n",
     "def getFpDict(count):\n",
     "    fpDict = {}\n",
     "    for i in range(1,count+1):\n",
-    "        with open(f'Data/Posting{i}.txt', \"r+\") as fp:\n",
+    "        with open(f'{fileName}/Posting{i}.txt', \"r+\") as fp:\n",
     "            while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
     "                fpPos = fp.tell()\n",
     "                line = fp.readline().split('-')\n",
@@ -26,7 +27,7 @@
     "    termInfo = None\n",
     "    if term not in fpDict: return termInfo\n",
     "    for count in fpDict[term]:\n",
-    "        with open(f'Data/Posting{count}.txt', \"r+\") as fp:\n",
+    "        with open(f'{fileName}/Posting{count}.txt', \"r+\") as fp:\n",
     "            fp.seek(fpDict[term][count])\n",
     "            tInfo = fp.readline().strip().split('-')[1]\n",
     "            tInfo = json.loads(tInfo)\n",
@@ -41,7 +42,7 @@
     "\n",
     "def getFpIdDict():\n",
     "    fpDict = {}\n",
-    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
+    "    with open(f'{fileName}/docId.txt', \"r+\") as fp:\n",
     "        while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
     "            fpPos = fp.tell()\n",
     "            line = fp.readline().split('>')\n",
@@ -50,13 +51,13 @@
     "    return fpDict\n",
     "\n",
     "def getUrl(docId, fpDict) -> str:\n",
-    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
+    "    with open(f'{fileName}/docId.txt', \"r+\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
     "        docInfo = json.loads(fp.readline().split('>')[1])\n",
     "        return docInfo['url']\n",
     "    \n",
     "def getDocLen(docId, fpDict) -> str:\n",
-    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
+    "    with open(f'{fileName}/docId.txt', \"r+\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
     "        docInfo = json.loads(fp.readline().split('>')[1])\n",
     "        return docInfo['docLen']"
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4636,7 +4637,7 @@
       "42188 - 704922 https://www.ics.uci.edu/~kay/courses/h22/hw/DVD-random.txt 0.0017363662048364688\n",
       "52757 - 24775 https://www.ics.uci.edu/~ejw/authoring/protocol/draft-ietf-webdav-protocol-07.txt 0.0015549758720600345\n",
       "49958 - 475851 https://www.ics.uci.edu/~kay/wordlist.txt 0.0012918155794852514\n",
-      "4248 ms\n"
+      "4194 ms\n"
      ]
     }
    ],
