store champion list

--- a/IndexMerge.ipynb
+++ b/IndexMerge.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
     "import math\n",
+    "from heapq import heapify, heappush, heappop\n",
     "\n",
     "def getFpDict(count):\n",
     "    fpDict = {}\n",
@@ -69,19 +70,31 @@
     "def writeIndex(fpDict, docIdDict):\n",
     "    for term in fpDict:\n",
     "        termInfo = getTermInfo(term,fpDict)\n",
-    "        idfDict = {}\n",
     "        idf = calculate_idf(termInfo['df'])\n",
+    "        termInfoDict = {'idf':idf, 'cList':[]}\n",
+    "        cList = []; heapify(cList)\n",
     "\n",
-    "        for docId in termInfo['wTf']:\n",
-    "            idfDict[docId] = round((termInfo['wTf'][docId] / getDocLen(int(docId), docIdDict)) * idf,5)\n",
+    "        for docIdStr in termInfo['wTf']:\n",
+    "            tf_idf = round((termInfo['wTf'][docIdStr] / getDocLen(int(docIdStr), docIdDict)) * idf,5)\n",
+    "            termInfoDict[docIdStr] = tf_idf\n",
+    "            if len(cList) < 10:\n",
+    "                heappush(cList, (tf_idf,docIdStr))\n",
+    "            else:\n",
+    "                minTf_Idf = cList[0][0]\n",
+    "                if tf_idf > minTf_Idf:\n",
+    "                    heappop(cList)\n",
+    "                    heappush(cList, (tf_idf,docIdStr))\n",
     "\n",
+    "        for tup in cList:\n",
+    "            termInfoDict['cList'].append(tup[1])\n",
+    "            \n",
     "        with open(f'Data/Index.txt', \"a\") as fp:\n",
-    "            fp.write(f'{term}-{json.dumps(idfDict)}\\n')"
+    "            fp.write(f'{term}-{json.dumps(termInfoDict)}\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
