update idf calc for div by 0

--- a/IndexMerge.ipynb
+++ b/IndexMerge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,10 @@
     "        return docInfo['docLen']\n",
     "    \n",
     "def calculate_idf(df, N = 55382):\n",
-    "    idf = math.log((N + 0.1) / (df + 0.1))\n",
+    "    try:\n",
+    "        idf = math.log((N) / (df))\n",
+    "    except ZeroDivisionError as e:\n",
+    "        idf = 0\n",
     "    return idf\n",
     "    \n",
     "def writeIndex(fpDict, docIdDict):\n",
@@ -89,7 +92,8 @@
     "            termInfoDict['cList'].append(tup[1])\n",
     "            \n",
     "        with open(f'Data/Index.txt', \"a\") as fp:\n",
-    "            fp.write(f'{term}-{json.dumps(termInfoDict)}\\n')"
+    "            fp.write(f'{term}-{json.dumps(termInfoDict)}\\n')\n",
+    "        break"
    ]
   },
   {
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
