--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -71,8 +71,11 @@
    "source": [
     "import math\n",
     "# compute idf of a token  *idfs are the same for the same token, only depend on the df and N in docs\n",
-    "def calculate_idf(N, df):\n",
-    "    idf = math.log((N + 0.1) / (df + 0.1))\n",
+    "def calculate_idf(df, N = 55382):\n",
+    "    try:\n",
+    "        idf = math.log((N) / (df))\n",
+    "    except ZeroDivisionError as e:\n",
+    "        idf = 0\n",
     "    return idf\n",
     "\n",
     "#comupte tfidf by tf and idf    \n",
@@ -169,7 +172,7 @@
     "    idfDict = {}\n",
     "    for word in queryList:\n",
     "        wordDf = getTermInfo(word,fpDict)['df']\n",
-    "        idfDict[word] = calculate_idf(N, wordDf)\n",
+    "        idfDict[word] = calculate_idf(wordDf)\n",
     "    return idfDict\n",
     "\n",
     "def getInvertedTf(term:str, docIdList:list[int], fpDict, idDict) -> dict:\n",
