--- a/IndexMerge.ipynb
+++ b/IndexMerge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "def getFpDict(count):\n",
     "    fpDict = {}\n",
     "    for i in range(1,count+1):\n",
-    "        with open(f'Data/Posting{i}.txt', \"r+\") as fp:\n",
+    "        with open(f'Data/Posting{i}.txt', \"r\") as fp:\n",
     "            while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
     "                fpPos = fp.tell()\n",
     "                line = fp.readline().split('-')\n",
@@ -28,7 +28,7 @@
     "    termInfo = None\n",
     "    if term not in fpDict: return termInfo\n",
     "    for count in fpDict[term]:\n",
-    "        with open(f'Data/Posting{count}.txt', \"r+\") as fp:\n",
+    "        with open(f'Data/Posting{count}.txt', \"r\") as fp:\n",
     "            fp.seek(fpDict[term][count])\n",
     "            tInfo = fp.readline().strip().split('-')[1]\n",
     "            tInfo = json.loads(tInfo)\n",
@@ -43,7 +43,7 @@
     "\n",
     "def getFpIdDict():\n",
     "    fpDict = {}\n",
-    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
+    "    with open(f'Data/docId.txt', \"r\") as fp:\n",
     "        while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
     "            fpPos = fp.tell()\n",
     "            line = fp.readline().split('>')\n",
@@ -52,13 +52,13 @@
     "    return fpDict\n",
     "\n",
     "def getUrl(docId, fpDict) -> str:\n",
-    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
+    "    with open(f'Data/docId.txt', \"r\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
     "        docInfo = json.loads(fp.readline().split('>')[1])\n",
     "        return docInfo['url']\n",
     "    \n",
     "def getDocLen(docId:int, fpDict) -> str:\n",
-    "    with open(f'Data/docId.txt', \"r+\") as fp:\n",
+    "    with open(f'Data/docId.txt', \"r\") as fp:\n",
     "        fp.seek(fpDict[docId])\n",
     "        docInfo = json.loads(fp.readline().split('>')[1])\n",
     "        return docInfo['docLen']\n",
@@ -92,13 +92,22 @@
     "            termInfoDict['cList'].append(tup[1])\n",
     "            \n",
     "        with open(f'Data/Index.txt', \"a\") as fp:\n",
-    "            fp.write(f'{term}-{json.dumps(termInfoDict)}\\n')\n",
-    "        break"
+    "            fp.write(f'{term}>{json.dumps(termInfoDict)}\\n')\n",
+    "\n",
+    "def getFpIndex():\n",
+    "    fpDict = {}\n",
+    "    with open(f'Data/Index.txt', \"r\") as fp:\n",
+    "        while not (fp.tell() == os.fstat(fp.fileno()).st_size):\n",
+    "            fpPos = fp.tell()\n",
+    "            line = fp.readline().split('>')\n",
+    "            term = line[0]\n",
+    "            fpDict[term] = fpPos\n",
+    "    return fpDict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,20 +116,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpDict = getFpDict(5)"
+    "fpDict = getFpDict(5)\n",
+    "writeIndex(fpDict, idDict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "writeIndex(fpDict, idDict)"
+    "fpIndex = getFpIndex()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import pyarrow.feather as feather\n",
+    "\n",
+    "def writeFeather(fileName:str, colName:str, dictObj: dict):\n",
+    "    df = pd.DataFrame.from_dict({colName:dictObj})\n",
+    "    feather.write_feather(df, f'Data/{fileName}.feather')\n",
+    "\n",
+    "writeFeather('indexFp', 'fp', fpIndex)\n",
+    "writeFeather('docIdFp', 'fp', idDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyarrow.feather as feather\n",
+    "import json\n",
+    "\n",
+    "def getFpDataframe(fileName:str):\n",
+    "    fpDf = None\n",
+    "    with open(f'Data/{fileName}.feather', 'rb') as f:\n",
+    "        fpDf = feather.read_feather(f)\n",
+    "    return fpDf\n",
+    "\n",
+    "def getTermData(term:str, fpDf):\n",
+    "    termInfo = None\n",
+    "    if term not in fpDf['fp']: return termInfo\n",
+    "    with open(f'Data/Index.txt', \"r\") as indexFile:\n",
+    "        indexFile.seek(fpDf['fp'][term])\n",
+    "        tInfo = indexFile.readline().strip().split('>')[1]\n",
+    "        return json.loads(tInfo) \n",
+    "\n",
+    "def getDocData(docId:int, fpDf):\n",
+    "    docInfo = None\n",
+    "    if docId not in fpDf['fp']: return docInfo\n",
+    "    with open(f'Data/docId.txt', \"r\") as indexFile:\n",
+    "        indexFile.seek(fpDf['fp'][docId])\n",
+    "        tInfo = indexFile.readline().strip().split('>')[1]\n",
+    "        return json.loads(tInfo) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "termFpDf = getFpDataframe('indexFp')\n",
+    "docIdFpDf = getFpDataframe('docIdFp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'idf': 4.64348848602763, 'cList': ['4390', '4382', '4402', '4406', '43349', '4425', '4420', '4416', '34548', '53021'], '60': 0.03656, '4382': 9.58464, '4383': 1.57879, '4390': 6.50088, '4396': 1.52786, '4400': 1.47092, '4402': 6.55791, '4403': 1.31566, '4406': 9.96802, '4410': 1.56833, '4411': 3.701, '4416': 11.88594, '4420': 10.10272, '4425': 11.62567, '4426': 1.48011, '4432': 1.63323, '4996': 0.01386, '5291': 0.00392, '5296': 0.01036, '5327': 0.00392, '5345': 0.01039, '5425': 0.00093, '5461': 0.00555, '5566': 0.00539, '6099': 0.00092, '6143': 0.01407, '6362': 0.00555, '7199': 0.00093, '7464': 0.00539, '7832': 0.01407, '7946': 0.02379, '7985': 0.00235, '8009': 0.02324, '8010': 0.00218, '8024': 0.00356, '8051': 0.00169, '8053': 0.0015, '8104': 0.00231, '8194': 0.02408, '8203': 0.00171, '8245': 0.03518, '8276': 0.02347, '8298': 0.15478, '8324': 0.00152, '8335': 0.0032, '8353': 0.00425, '8362': 0.00361, '8369': 0.00165, '8371': 0.00215, '8389': 0.00185, '8456': 0.0015, '8489': 0.05495, '8528': 0.02271, '8607': 0.0021, '8635': 0.03487, '8644': 0.00152, '8663': 0.00167, '8672': 0.00264, '8688': 0.00239, '8697': 0.00235, '8704': 0.00153, '8712': 0.00157, '8718': 0.00323, '8753': 0.0021, '8772': 0.00382, '8788': 0.00361, '8815': 0.00296, '8896': 0.00225, '8915': 0.00328, '8930': 0.00181, '8933': 0.00181, '8968': 0.00221, '9059': 0.0029, '9074': 0.00319, '9086': 0.00181, '9092': 0.00219, '9137': 0.00185, '9163': 0.00264, '9174': 0.00261, '9196': 0.03938, '9209': 0.00241, '9214': 0.00232, '9294': 0.00181, '9321': 0.00183, '9328': 0.02855, '9365': 0.02271, '9392': 0.03452, '9413': 0.00161, '9436': 0.00313, '9473': 0.00215, '9483': 0.00184, '9484': 0.03377, '9522': 0.00264, '9548': 0.00165, '9549': 0.08392, '9588': 0.00382, '9659': 0.0027, '9678': 0.035, '9682': 0.00181, '9691': 0.00383, '9699': 0.0038, '9708': 0.00158, '9713': 0.00264, '9726': 0.00215, '9743': 0.00154, '9811': 0.00168, '9812': 0.02324, '9825': 0.00272, '9868': 0.00315, '9873': 0.00163, '9898': 0.00359, '9900': 0.00173, '9933': 0.00149, '9947': 0.00379, '9971': 0.00178, '10007': 0.00211, '10024': 0.00157, '10049': 0.00181, '10069': 0.00328, '10118': 0.0018, '10146': 0.03929, '10154': 0.0015, '10162': 0.00151, '10218': 0.03452, '10295': 0.02324, '10369': 0.00231, '10372': 0.00225, '10379': 0.00235, '10382': 0.00219, '10443': 0.00154, '10455': 0.00158, '10521': 0.00161, '10575': 0.00303, '10597': 0.02324, '10659': 0.03444, '10683': 0.00233, '10728': 0.00176, '10737': 0.00185, '10743': 0.00282, '10771': 0.00383, '10807': 0.0038, '10864': 0.03491, '10866': 0.03365, '10919': 0.00267, '10952': 0.03377, '10958': 0.00216, '10963': 0.00178, '10970': 0.00218, '10997': 0.0021, '11051': 0.00152, '11067': 0.00696, '11091': 0.00164, '11098': 0.00152, '11113': 0.00377, '11126': 0.00379, '11133': 0.02326, '11161': 0.00231, '11206': 0.0015, '11207': 0.00323, '11214': 0.00379, '11268': 0.02328, '11271': 0.00355, '11275': 0.03197, '11372': 0.03202, '11433': 0.00176, '11454': 0.00238, '11463': 0.00231, '11468': 0.00276, '11500': 0.00378, '11536': 0.00219, '11553': 0.00152, '11557': 0.00276, '11566': 0.00234, '11580': 0.03536, '11590': 0.00175, '11591': 0.03929, '11599': 0.00276, '11636': 0.00181, '11648': 0.00163, '11656': 0.00341, '11658': 0.02459, '11683': 0.00152, '11723': 0.00011, '11784': 0.00179, '11798': 0.0035, '11830': 0.00227, '11833': 0.0743, '11908': 0.00276, '11939': 0.02328, '11942': 0.00272, '11949': 0.00181, '11953': 0.00156, '11986': 0.00219, '12003': 0.00309, '12031': 0.00186, '12061': 0.00216, '12078': 0.00374, '12090': 0.03236, '12121': 0.00255, '12124': 0.00151, '12153': 0.00235, '12160': 0.00185, '12182': 0.00235, '12197': 0.00222, '12198': 0.00219, '12248': 0.0344, '12281': 0.00359, '12323': 0.02402, '12333': 0.02328, '12348': 0.00175, '12369': 0.00151, '12373': 0.00336, '12386': 0.00178, '12399': 0.00362, '12402': 0.00154, '12418': 0.00232, '12419': 0.00185, '12452': 0.00165, '12461': 0.00155, '12468': 0.00344, '12500': 0.00012, '12580': 0.0021, '12581': 0.00328, '12611': 0.0017, '12700': 0.00185, '12715': 0.00383, '12723': 0.00239, '12728': 0.02328, '12738': 0.02232, '12790': 0.00235, '12792': 0.00163, '12861': 0.00175, '12862': 0.00243, '12868': 0.00163, '12897': 0.00176, '12939': 0.00352, '12940': 0.03938, '12958': 0.00158, '12987': 0.00211, '12999': 0.03938, '13026': 0.00184, '13094': 0.02328, '13122': 0.00235, '13135': 0.0387, '13261': 0.03457, '13277': 0.00235, '13284': 0.00308, '13342': 0.03929, '13367': 0.00155, '13408': 0.02863, '13411': 0.00181, '13447': 0.00328, '13451': 0.03902, '13455': 0.00177, '13476': 0.03389, '13516': 0.03919, '13523': 0.00178, '13532': 0.00218, '13565': 0.02318, '13587': 0.00155, '13642': 0.00309, '13657': 0.02353, '13716': 0.00152, '13788': 0.00212, '13827': 0.00323, '13849': 0.00211, '13850': 0.0021, '13856': 0.00173, '13883': 0.00266, '13932': 0.01225, '13934': 0.03205, '13939': 0.0673, '13965': 0.00151, '14058': 0.03496, '14083': 0.03919, '14100': 0.00363, '14108': 0.00231, '14148': 0.00151, '14192': 0.00153, '14213': 0.00184, '14214': 0.00232, '14310': 0.0038, '14324': 0.00235, '14338': 0.00185, '14363': 0.03452, '14378': 0.02549, '14394': 0.00152, '14397': 0.00169, '14404': 0.00362, '14431': 0.00165, '14432': 0.00179, '14438': 0.00154, '14450': 0.00162, '14471': 0.03452, '14481': 0.00364, '14501': 0.00365, '14540': 0.00163, '14551': 0.03595, '14566': 0.0029, '14567': 0.00219, '14610': 0.00375, '14622': 0.00184, '14623': 0.00342, '14632': 0.00184, '14657': 0.00164, '14712': 0.00154, '14713': 0.00186, '14756': 0.03938, '14820': 0.00159, '14872': 0.00362, '14873': 0.00175, '14875': 0.15287, '14884': 0.03929, '14908': 0.00164, '14916': 0.00277, '14922': 0.00375, '14949': 0.00226, '14963': 0.03452, '14968': 0.00292, '15051': 0.00377, '15064': 0.00231, '15086': 0.00165, '15111': 0.00176, '15133': 0.00156, '15225': 0.03522, '15227': 0.00255, '15233': 0.03518, '15247': 0.00178, '15290': 0.00235, '15317': 0.01925, '15390': 0.0015, '15397': 0.00173, '15411': 0.00302, '15412': 0.00175, '15437': 0.00185, '15499': 0.00176, '15559': 0.02438, '15589': 0.00172, '15613': 0.02324, '15621': 0.0015, '15665': 0.00328, '15668': 0.00225, '15675': 0.00219, '15699': 0.00184, '15701': 0.00163, '15705': 0.00181, '15731': 0.00156, '15747': 0.0018, '15768': 0.00174, '15796': 0.00361, '15799': 0.00246, '15847': 0.00181, '16945': 0.00019, '17139': 0.00688, '17140': 0.00755, '17347': 0.00626, '17605': 0.00755, '17760': 0.00424, '18196': 0.01055, '18542': 0.00671, '18860': 0.02772, '19052': 0.00671, '19175': 0.01793, '19179': 0.01016, '19823': 0.02705, '19845': 0.00474, '20019': 0.07313, '20023': 0.00309, '20027': 0.01872, '20033': 0.01601, '20034': 0.0059, '20056': 0.00668, '20478': 4.12251, '20525': 0.58495, '20614': 0.92187, '20803': 0.92187, '20937': 4.12251, '21103': 0.58495, '21125': 0.01354, '21152': 0.01354, '21729': 0.362, '21967': 0.0009, '22138': 0.38716, '22300': 0.00832, '22701': 0.00495, '22736': 0.02298, '22992': 0.15741, '23416': 0.01144, '23543': 0.0008, '23919': 0.00388, '23978': 0.0006, '24056': 0.00311, '24378': 0.00101, '24470': 0.00105, '24539': 0.26962, '24611': 0.01104, '24841': 0.00114, '25237': 0.0001, '25274': 7e-05, '25333': 0.00581, '25587': 0.10482, '26006': 0.00227, '26029': 0.10036, '26035': 0.26606, '26761': 0.00289, '26990': 0.00596, '26992': 0.07255, '27231': 0.47801, '27306': 0.16855, '27524': 0.00422, '27850': 0.00178, '28476': 0.00165, '29046': 0.28528, '29205': 0.15741, '29244': 0.15741, '29291': 0.00108, '29326': 0.34852, '29803': 0.69387, '29947': 0.12635, '30121': 0.00095, '30191': 0.00723, '30421': 0.29877, '30559': 0.00111, '30975': 0.00106, '31696': 0.00116, '32089': 0.0032, '32190': 0.00435, '32290': 0.0084, '32546': 0.0597, '32699': 0.03229, '32744': 0.01188, '32946': 0.0001, '33210': 0.20504, '33471': 1.3085, '33524': 0.00052, '33603': 0.0013, '33730': 0.01076, '33793': 0.00103, '33952': 0.00113, '34292': 0.28528, '34548': 14.57095, '34577': 0.2639, '34630': 0.00548, '34644': 0.00441, '34658': 0.00482, '35239': 0.00095, '36249': 0.0012, '36409': 0.00103, '36668': 0.00251, '36740': 0.00321, '36800': 0.00182, '36949': 0.46435, '36957': 0.00349, '37121': 0.00127, '37291': 0.0085, '37626': 0.0022, '37675': 0.02276, '37845': 0.06001, '38104': 0.46435, '38226': 0.00108, '38351': 0.00235, '38471': 0.14733, '39065': 0.00201, '39364': 1.8155, '39931': 0.01772, '39934': 0.00403, '40235': 0.00625, '40464': 0.00847, '40613': 0.32607, '41171': 0.08146, '41867': 0.00013, '41982': 0.02721, '42000': 0.00346, '42188': 7e-05, '42529': 0.362, '42531': 0.07489, '42855': 0.00496, '43349': 11.86669, '43472': 0.26962, '43853': 0.002, '44051': 0.30431, '44161': 0.00066, '44166': 0.00065, '44328': 0.00052, '44385': 0.00226, '44504': 0.01533, '44646': 0.00773, '44662': 0.03341, '44726': 0.00124, '44858': 0.20531, '45166': 0.29877, '45286': 0.60562, '45417': 0.00015, '45474': 0.47801, '45691': 0.00082, '45936': 0.78191, '46602': 0.83083, '46984': 0.07489, '46999': 0.00128, '47013': 0.01498, '47042': 0.00646, '47092': 0.0085, '47305': 0.05917, '47376': 0.00178, '47388': 0.00969, '47491': 0.60578, '47540': 0.30957, '47565': 0.00102, '47669': 0.01943, '48088': 0.33875, '48338': 0.11706, '48612': 0.00115, '48931': 0.00296, '49195': 0.00553, '49386': 0.00288, '49475': 0.00103, '49958': 4e-05, '50462': 0.32607, '50761': 0.15741, '51009': 0.12899, '51010': 0.00101, '51255': 0.00046, '52579': 0.0017, '52783': 0.00567, '53021': 14.08525, '53460': 0.20342, '54063': 0.00509, '54216': 0.00547, '54290': 0.00672, '54332': 0.00366, '54394': 0.00547, '54444': 0.00509, '54695': 0.00672}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(getTermData('hello', termFpDf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'url': 'https://aiclub.ics.uci.edu/', 'docLen': 390}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(getDocData(1, docIdFpDf))"
    ]
   }
  ],
