show cosine distance and similarity

--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -314,14 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cosine Distance: 0.006859350470816428\n"
+      "Cosine Sim: 0.9421524260705721\n",
+      "Cosine Distance: 0.057847573929427853\n"
      ]
     }
    ],
@@ -331,11 +332,13 @@
     "from numpy.linalg import norm\n",
     " \n",
     "# define two lists or array\n",
-    "A = np.array([2.0768873426547767, 1.6485530002985138, 0.17584065381430652])\n",
-    "B = np.array([0.00013093724775117276,8.314634624528336e-05,2.217172860592579e-06])\n",
+    "A = np.array([0.789, 0.515, 0.335,0])\n",
+    "B = np.array([0.832, 0.557, 0, 0])\n",
     " \n",
     "# compute cosine Distnace\n",
-    "cosineDistance = 1 - (np.dot(A,B)/(norm(A)*norm(B)))\n",
+    "cosineSim = np.dot(A,B)/(norm(A)*norm(B))\n",
+    "cosineDistance = 1 - cosineSim\n",
+    "print(\"Cosine Sim:\", cosineSim)\n",
     "print(\"Cosine Distance:\", cosineDistance)"
    ]
   }
