--- a/QRank.ipynb
+++ b/QRank.ipynb
@@ -332,6 +332,7 @@
     "from numpy.linalg import norm\n",
     " \n",
     "# define two lists or array\n",
+    "#Data using slide 41 lec 21\n",
     "A = np.array([0.789, 0.515, 0.335,0])\n",
     "B = np.array([0.832, 0.557, 0, 0])\n",
     " \n",
