calc sum of tfidf

--- a/CoRank.ipynb
+++ b/CoRank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +67,31 @@
     "        else:\n",
     "            intersection_keys = intersection_keys & queryDict[tup[1]].keys()\n",
     "\n",
-    "    return intersection_keys"
+    "    return intersection_keys\n",
+    "\n",
+    "def getTf_IdfRank(docIds:set[str], qDict:dict[str]) -> list[tuple]:\n",
+    "    docRanks = []; heapify(docRanks)\n",
+    "    tfSet = set()\n",
+    "    for docIdStr in docIds:\n",
+    "        sumTf_Idf = 0\n",
+    "        for term in qDict:\n",
+    "            sumTf_Idf += qDict[term][docIdStr]\n",
+    "        sumTf_Idf = round(sumTf_Idf, 5)\n",
+    "        if sumTf_Idf not in tfSet:\n",
+    "            if len(docRanks) < 10:\n",
+    "                heappush(docRanks, (sumTf_Idf,docIdStr))\n",
+    "                tfSet.add(sumTf_Idf)\n",
+    "            else:\n",
+    "                if sumTf_Idf > docRanks[0][0]:\n",
+    "                    heappop(docRanks)\n",
+    "                    heappush(docRanks, (sumTf_Idf,docIdStr))\n",
+    "                    tfSet.add(sumTf_Idf)\n",
+    "    return docRanks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "108 ms\n"
+      "19585 http://sli.ics.uci.edu/pmwiki/pmwiki.php?n=AIStats%2FPostings 83.24155\n",
+      "54414 https://www.informatics.uci.edu/2018/10/ 79.0712\n",
+      "54084 https://www.informatics.uci.edu/very-top-footer-menu-items/news/page/11/ 78.66034\n",
+      "54098 https://www.informatics.uci.edu/2017/11/#content 75.2595\n",
+      "32894 https://www.ics.uci.edu/~eppstein/pubs/pubs.ff 74.24377\n",
+      "49861 https://www.ics.uci.edu/~eppstein/pubs/all.html 74.166\n",
+      "4610 https://cml.ics.uci.edu/category/aiml/page/2/ 74.05639\n",
+      "52479 https://www.ics.uci.edu/~eppstein/pubs/geom-all.html 71.71979\n",
+      "23029 https://www.ics.uci.edu/community/news/view_news.php?id=665 68.54787\n",
+      "54337 https://www.informatics.uci.edu/2018/12/#content 67.17466\n",
+      "73 ms\n"
      ]
     }
    ],
@@ -97,9 +126,13 @@
     "import time\n",
     "start = time.time()\n",
     "\n",
-    "query = 'University of California Irvine'\n",
+    "query = 'University of California Irvine Computer Science good or bad?'\n",
     "termDict, intersectOrder = stemQuery(query, termFpDf)\n",
     "docIds = getDocIds(termDict, intersectOrder)\n",
+    "docRanks = getTf_IdfRank(docIds, termDict)\n",
+    "for tup in sorted(docRanks, reverse=True):\n",
+    "    url = getDocData(int(tup[1]),docIdFpDf)['url']\n",
+    "    print(tup[1], url, tup[0])\n",
     "\n",
     "end = time.time()\n",
     "print(round((end - start) * 1000),'ms') #Time in milliseconds"
