--- a/CoRank.ipynb
+++ b/CoRank.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,24 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19585 http://sli.ics.uci.edu/pmwiki/pmwiki.php?n=AIStats%2FPostings 83.24155\n",
-      "54414 https://www.informatics.uci.edu/2018/10/ 79.0712\n",
-      "54084 https://www.informatics.uci.edu/very-top-footer-menu-items/news/page/11/ 78.66034\n",
-      "54098 https://www.informatics.uci.edu/2017/11/#content 75.2595\n",
-      "32894 https://www.ics.uci.edu/~eppstein/pubs/pubs.ff 74.24377\n",
-      "49861 https://www.ics.uci.edu/~eppstein/pubs/all.html 74.166\n",
-      "4610 https://cml.ics.uci.edu/category/aiml/page/2/ 74.05639\n",
-      "52479 https://www.ics.uci.edu/~eppstein/pubs/geom-all.html 71.71979\n",
-      "23029 https://www.ics.uci.edu/community/news/view_news.php?id=665 68.54787\n",
-      "54337 https://www.informatics.uci.edu/2018/12/#content 67.17466\n",
-      "73 ms\n"
+      "29716 https://www.ics.uci.edu/~neno/vita/vita.html 46.98415\n",
+      "17001 https://mswe.ics.uci.edu/ 45.9336\n",
+      "54680 https://www.informatics.uci.edu/grad/mswe/#content 44.21775\n",
+      "24257 https://www.ics.uci.edu/grad/degrees/index 43.71712\n",
+      "42433 https://www.ics.uci.edu/grad/admissions/ 43.66838\n",
+      "16995 https://mswe.ics.uci.edu/program/curriculum/ 42.92395\n",
+      "34271 https://www.ics.uci.edu/~mrrahimi/Education.html 40.82172\n",
+      "54459 https://www.informatics.uci.edu/grad/ms-software-engineering/#content 40.80404\n",
+      "21729 https://www.ics.uci.edu/~epaikari/#portfolioModal3 40.38412\n",
+      "54745 https://www.informatics.uci.edu/alumni-spotlights-ics-grads-help-autogravity-revolutionize-digital-car-buying/#content 40.07312\n",
+      "104 ms\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
     "import time\n",
     "start = time.time()\n",
     "\n",
-    "query = 'University of California Irvine Computer Science good or bad?'\n",
+    "query = 'master of software engineer'\n",
     "termDict, intersectOrder = stemQuery(query, termFpDf)\n",
     "docIds = getDocIds(termDict, intersectOrder)\n",
     "docRanks = getTf_IdfRank(docIds, termDict)\n",
